--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "@types/react-scroll": "^1.5.4",
     "@types/react-stickynode": "^1.4.0",
     "@types/react-visibility-sensor": "^3.11.0",
+    "@types/request": "^2.48.1",
     "@types/styled-system": "^3.0.6",
     "animate.css": "^3.7.0",
+    "axios": "^0.18.0",
     "emailjs-com": "^2.2.4",
     "emotion": "^9.2.12",
     "lodash": "^4.17.11",
@@ -30,13 +32,16 @@
     "react-emotion": "^9.2.12",
     "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.3",
+    "react-mailchimp-subscribe": "^2.0.2",
     "react-provide-scroll-position": "^1.0.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "react-scroll": "^1.7.10",
     "react-spinners": "^0.4.7",
     "react-stickynode": "^2.1.0",
     "react-visibility-sensor": "^5.0.2",
     "react-waypoint": "^8.0.3",
+    "request": "^2.88.0",
     "styled-system": "^3.1.11",
     "typescript": "^3.1.6"
   },
