--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "react-fitness-club",
-  "version": "0.1",
+  "version": "0.2",
   "author": "Halsey Vandenberg",
   "dependencies": {
     "@types/googlemaps": "^3.30.16",
@@ -12,6 +12,7 @@
     "@types/react": "^16.4.18",
     "@types/react-animate-on-scroll": "^2.1.1",
     "@types/react-dom": "^16.0.9",
+    "@types/react-mailchimp-subscribe": "^2.0.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-scroll": "^1.5.4",
     "@types/react-stickynode": "^1.4.0",
