--- a/package.json
+++ b/package.json
@@ -11,23 +11,24 @@
     "@types/ramda": "^0.25.41",
     "@types/react": "^16.4.18",
     "@types/react-animate-on-scroll": "^2.1.1",
+    "@types/react-big-calendar": "^0.20.1",
     "@types/react-dom": "^16.0.9",
     "@types/react-mailchimp-subscribe": "^2.0.2",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-scroll": "^1.5.4",
     "@types/react-stickynode": "^1.4.0",
     "@types/react-visibility-sensor": "^3.11.0",
-    "@types/request": "^2.48.1",
     "@types/styled-system": "^3.0.6",
     "animate.css": "^3.7.0",
-    "axios": "^0.18.0",
     "emailjs-com": "^2.2.4",
     "emotion": "^9.2.12",
     "lodash": "^4.17.11",
+    "moment": "^2.22.2",
     "node-instagram": "^4.2.0",
     "ramda": "^0.25.0",
     "react": "^16.6.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-big-calendar": "^0.20.2",
     "react-countup": "^4.0.0",
     "react-dom": "^16.6.0",
     "react-emotion": "^9.2.12",
@@ -42,7 +43,6 @@
     "react-stickynode": "^2.1.0",
     "react-visibility-sensor": "^5.0.2",
     "react-waypoint": "^8.0.3",
-    "request": "^2.88.0",
     "styled-system": "^3.1.11",
     "typescript": "^3.1.6"
   },
