--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "animate.css": "^3.7.0",
     "emailjs-com": "^2.2.4",
     "emotion": "^9.2.12",
+    "firebase": "^5.6.0",
     "lodash": "^4.17.11",
     "moment": "^2.22.2",
     "node-instagram": "^4.2.0",
@@ -39,6 +40,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "react-scroll": "^1.7.10",
+    "react-social-login-buttons": "^2.3.0",
     "react-spinners": "^0.4.7",
     "react-stickynode": "^2.1.0",
     "react-visibility-sensor": "^5.0.2",
