--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.2",
   "author": "Halsey Vandenberg",
   "dependencies": {
+    "@react-pdf/renderer": "^1.1.0",
+    "@types/blob-util": "^1.3.3",
     "@types/googlemaps": "^3.30.16",
     "@types/jest": "^23.3.9",
+    "@types/lodash": "^4.14.119",
     "@types/markerclustererplus": "^2.1.33",
     "@types/promise-polyfill": "^6.0.0",
     "@types/query-string": "^6.1.1",
@@ -17,9 +20,11 @@
     "@types/react-router-dom": "^4.3.1",
     "@types/react-scroll": "^1.5.4",
     "@types/react-stickynode": "^1.4.0",
+    "@types/react-tooltip": "^3.9.0",
     "@types/react-visibility-sensor": "^3.11.0",
     "@types/styled-system": "^3.0.6",
     "animate.css": "^3.7.0",
+    "blob-util": "^2.0.2",
     "emailjs-com": "^2.2.4",
     "emotion": "^9.2.12",
     "firebase": "^5.6.0",
@@ -32,6 +37,7 @@
     "react-big-calendar": "^0.20.2",
     "react-countup": "^4.0.0",
     "react-dom": "^16.6.0",
+    "react-dropzone": "^8.0.2",
     "react-emotion": "^9.2.12",
     "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.3",
@@ -43,6 +49,7 @@
     "react-social-login-buttons": "^2.3.0",
     "react-spinners": "^0.4.7",
     "react-stickynode": "^2.1.0",
+    "react-tooltip": "^3.9.2",
     "react-visibility-sensor": "^5.0.2",
     "react-waypoint": "^8.0.3",
     "styled-system": "^3.1.11",
