--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "animate.css": "^3.7.0",
     "blob-util": "^2.0.2",
     "emailjs-com": "^2.2.4",
+    "emoji-strip": "^1.0.1",
     "emotion": "^9.2.12",
     "firebase": "^5.6.0",
     "lodash": "^4.17.11",
