--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/styled-system": "^3.0.6",
     "animate.css": "^3.7.0",
     "blob-util": "^2.0.2",
+    "date-fns": "^1.30.1",
     "emailjs-com": "^2.2.4",
     "emoji-strip": "^1.0.1",
     "emotion": "^9.2.12",
@@ -51,6 +52,7 @@
     "react-stickynode": "^2.1.0",
     "react-visibility-sensor": "^5.0.2",
     "react-waypoint": "^8.0.3",
+    "rrule": "^v2.6.0",
     "styled-system": "^3.1.11",
     "typescript": "^3.1.6"
   },
