--- a/package.json
+++ b/package.json
@@ -52,7 +52,7 @@
     "react-stickynode": "^2.1.0",
     "react-visibility-sensor": "^5.0.2",
     "react-waypoint": "^8.0.3",
-    "rrule": "^v2.6.0",
+    "rrule": "2.2.0",
     "styled-system": "^3.1.11",
     "typescript": "^3.1.6"
   },
