--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.3",
     "react-mailchimp-subscribe": "^2.0.2",
+    "react-pose": "^4.0.7",
     "react-provide-scroll-position": "^1.0.2",
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
