--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@react-pdf/renderer": "^1.1.0",
     "@types/blob-util": "^1.3.3",
+    "@types/body-scroll-lock": "^2.6.0",
     "@types/googlemaps": "^3.30.16",
     "@types/jest": "^23.3.9",
     "@types/lodash": "^4.14.119",
@@ -17,6 +18,7 @@
     "@types/react-big-calendar": "^0.20.1",
     "@types/react-dom": "^16.0.9",
     "@types/react-mailchimp-subscribe": "^2.0.2",
+    "@types/react-modal": "^3.8.1",
     "@types/react-router-dom": "^4.3.1",
     "@types/react-scroll": "^1.5.4",
     "@types/react-stickynode": "^1.4.0",
@@ -24,6 +26,7 @@
     "@types/styled-system": "^3.0.6",
     "animate.css": "^3.7.0",
     "blob-util": "^2.0.2",
+    "body-scroll-lock": "^2.6.1",
     "date-fns": "^1.30.1",
     "emailjs-com": "^2.2.4",
     "emoji-strip": "^1.0.1",
@@ -44,6 +47,7 @@
     "react-google-maps": "^9.4.5",
     "react-grid-gallery": "^0.5.3",
     "react-mailchimp-subscribe": "^2.0.2",
+    "react-modal": "^3.8.1",
     "react-pose": "^4.0.7",
     "react-provide-scroll-position": "^1.0.2",
     "react-router-dom": "^4.3.1",
