--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@types/markerclustererplus": "^2.1.33",
     "@types/promise-polyfill": "^6.0.0",
     "@types/query-string": "^6.1.1",
-    "@types/ramda": "^0.25.41",
+    "@types/ramda": "^0.26.41",
     "@types/react": "^16.4.18",
     "@types/react-animate-on-scroll": "^2.1.1",
     "@types/react-big-calendar": "^0.20.1",
@@ -37,9 +37,10 @@
     "moment": "^2.22.2",
     "node-instagram": "^4.2.0",
     "query-string": "^6.2.0",
-    "ramda": "^0.25.0",
+    "ramda": "^0.27.0",
     "react": "^16.6.0",
     "react-animate-on-scroll": "^2.1.5",
+    "react-back-to-top-button": "^0.0.14",
     "react-big-calendar": "^0.20.2",
     "react-countup": "^4.0.0",
     "react-dom": "^16.6.0",
@@ -54,10 +55,11 @@
     "react-router-dom": "^4.3.1",
     "react-scripts-ts": "3.1.0",
     "react-scroll": "^1.7.10",
+    "react-scroll-up-button": "^1.6.4",
     "react-social-login-buttons": "^2.3.0",
     "react-spinners": "^0.4.7",
     "react-stickynode": "^2.1.0",
-    "react-visibility-sensor": "^5.0.2",
+    "react-visibility-sensor": "^5.1.1",
     "react-waypoint": "^8.0.3",
     "rrule": "2.2.0",
     "styled-system": "^3.1.11",
